; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_buffer.c_array_mult_safe.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_buffer.c_array_mult_safe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@M_FATAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [48 x i8] c"attempted allocation of excessively large array\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @array_mult_safe(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  store i64 4294967295, i64* %7, align 8
  %9 = load i64, i64* %4, align 8
  %10 = load i64, i64* %5, align 8
  %11 = mul i64 %9, %10
  %12 = load i64, i64* %6, align 8
  %13 = add i64 %11, %12
  store i64 %13, i64* %8, align 8
  %14 = load i64, i64* %4, align 8
  %15 = icmp ugt i64 %14, 4294967295
  %16 = zext i1 %15 to i32
  %17 = call i64 @unlikely(i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %37, label %19

19:                                               ; preds = %3
  %20 = load i64, i64* %5, align 8
  %21 = icmp ugt i64 %20, 4294967295
  %22 = zext i1 %21 to i32
  %23 = call i64 @unlikely(i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %37, label %25

25:                                               ; preds = %19
  %26 = load i64, i64* %6, align 8
  %27 = icmp ugt i64 %26, 4294967295
  %28 = zext i1 %27 to i32
  %29 = call i64 @unlikely(i32 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %37, label %31

31:                                               ; preds = %25
  %32 = load i64, i64* %8, align 8
  %33 = icmp ugt i64 %32, 4294967295
  %34 = zext i1 %33 to i32
  %35 = call i64 @unlikely(i32 %34)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %40

37:                                               ; preds = %31, %25, %19, %3
  %38 = load i32, i32* @M_FATAL, align 4
  %39 = call i32 @msg(i32 %38, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0))
  br label %40

40:                                               ; preds = %37, %31
  %41 = load i64, i64* %8, align 8
  ret i64 %41
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @msg(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
